--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,26 @@
-conformer==0.3.2
-deepspeed==0.14.2; sys_platform == 'linux'
-diffusers==0.27.2
-fastapi==0.115.3
-fastapi-cli==0.0.4
-gdown==5.1.0
-gradio==5.3.0
-grpcio==1.57.0
-grpcio-tools==1.57.0
-huggingface_hub==0.25.2
-hydra-core==1.3.2
-HyperPyYAML==1.2.2
-inflect==7.3.1
-librosa==0.10.2
-lightning==2.2.4
-matplotlib==3.7.5
-modelscope==1.15.0
-networkx==3.1
-numpy==1.24.4
+torch==2.5.0
+torchaudio==2.5.0
+diffusers==0.31.0
+accelerate==1.0.1
+transformers<4.46.0
+peft==0.13.2
+bitsandbytes==0.44.1
+deepspeed==0.15.3
+gradio==5.4.0
+fastapi==0.115.4
+inflect==7.4.0
+librosa==0.10.2.post1
+lightning==2.4.0
+matplotlib==3.9.2
+modelscope==1.19.2
 omegaconf==2.3.0
-onnxruntime-gpu==1.16.0; sys_platform == 'linux'
-onnxruntime==1.16.0; sys_platform == 'darwin' or sys_platform == 'windows'
-openai-whisper==20231117
-protobuf==4.25
-pydantic==2.7.0
-rich==13.7.1
-Requests==2.32.3
-safetensors==0.4.5
-soundfile==0.12.1
-tensorboard==2.14.0
-transformers==4.44.1
-uvicorn==0.32.0
+onnxruntime-gpu==1.19.2
+openai-whisper==20240930
+protobuf==5.28.3
+tensorboard==2.18.0
+hyperpyyaml==1.2.2
+hydra-core==1.3.2
+gdown==5.2.0
 wget==3.2
-WeTextProcessing==1.0.3
-torch==2.3.0
-torchaudio==2.3.0
+conformer==0.3.2
+matcha-tts==0.0.7.0
